tests/snapshots/raw__examples_in_informal_reference-71.snap
---
source: tests/raw.rs
expression: "<reference_impl::Lexer>::lex_all(\"123.0E+77\")"
---
Ok(
    [
        Token {
            class: decimal_integer,
            length: 3,
        },
        Token {
            class: dot,
            length: 1,
        },
        Token {
            class: decimal_float,
            length: 5,
        },
    ],
)
